added uploads to gitignore

--- a/backend/api/dish/models/Dish.settings.json
+++ b/backend/api/dish/models/Dish.settings.json
@@ -1,8 +1,8 @@
 {
   "connection": "default",
-  "collectionName": "",
+  "collectionName": "dish",
   "info": {
-    "name": "restaurant",
+    "name": "dish",
     "description": ""
   },
   "options": {
@@ -15,14 +15,17 @@
     "description": {
       "type": "text"
     },
+    "price": {
+      "type": "integer"
+    },
     "image": {
       "model": "file",
       "via": "related",
       "plugin": "upload"
     },
-    "dishes": {
-      "collection": "dish",
-      "via": "restaurant"
+    "restaurant": {
+      "model": "restaurant",
+      "via": "dishes"
     }
   }
 }
